# VirtualMuseum

./: CMakeLists.txt  README.md  imgui.ini
include/: Application.hpp  Camera.hpp  ExhibitionArea.hpp  InputManager.hpp  LightingSystem.hpp  Renderer.hpp  Robot.hpp  RobotMesh.hpp  Room.hpp  Shader.hpp  Statue.hpp  StatueManager.hpp  Texture.hpp  UIManager.hpp
src/: Application.cpp  Camera.cpp  ExhibitionArea.cpp  InputManager.cpp  LightingSystem.cpp  Renderer.cpp  Robot.cpp  RobotMesh.cpp  Room.cpp  Shader.cpp  Statue.cpp  StatueManager.cpp  UIManager.cpp  main.cpp  stb_image_impl.cpp
